# Geometry-Dash-AI

./: .gitattributes  .gitignore  .gitmodules  README.md
game/: CMakeLists.txt
game/hdr/: resources.hpp
game/hdr/logic/: file.hpp  map.hpp  player.hpp
game/maps/: 0.save
game/src/logic/: map.cpp  player.cpp
pybind11-practice/cpp/: main.cpp
python_/: __init__.py  agent.py  app.py  constants.py  env.py  helpers.py  levelStructure.py  package_init.py  test.py  testAgent.py  threads.py
